Support for four PDF renderer tools

--- a/static/tools/test.cfg
+++ b/static/tools/test.cfg
@@ -12,7 +12,7 @@ css=/workspace/xml2pdf/mpt/static/stylesheets/custom.css
 
 [tools]
 
-mpdf=
-prince=
-antenna_house_formatter=
-apache_fop=
+mpdf=/workspace/xml2pdf/mpt/static/tools/xml2pdf-php/mpdf.php
+prince=prince
+ahf=/usr/AHFormatterV6_64/run.sh
+fop=fop
