Steps option for config

--- a/static/tools/test.cfg
+++ b/static/tools/test.cfg
@@ -1,18 +1,65 @@
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+;
+; Test configuration for DOC2PDF conversion with various PDF tools and
+; pipelines for the Monograph Publication Tool (MPT).
+;
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+
+;;;;;;;;;;;;;;;;;;;
+; General Setting ;
+;;;;;;;;;;;;;;;;;;;
+
 [general]
 
-base_dir = /workspace/xml2pdf/mpt
+; Where your installation of the Monograph Publication Tool lives.
+base_dir = /workspace/mpt
+
+; Name of the subdirectory, where your test files (docx, xml etc.) are.
 test_collection = misc
-test_name = footnotes
+
+; Name of the particular test that is used in the filenames.
+test_name = footnote
+
+;;;;;;;;;;;;;;;;;;;;;
+; Pipeline Settings ;
+;;;;;;;;;;;;;;;;;;;;;
+
+[pipeline]
+
+; At which step in the conversion pipeline to start.
+; 1: (DOCX -> XML)
+; 2: (XML -> FO/HTML)
+; 3: (FO/HTML -> PDF)
+; Default is 1;
+start = 1
+
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+; XML Conversion and Style Settings ;
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 
 [stylesheets]
 
-xslt_html=/workspace/xml2pdf/mpt/static/stylesheets/jats-html.xsl
-xslt_fo=/workspace/xml2pdf/mpt/static/stylesheets/jats-xslfo.xsl
-css=/workspace/xml2pdf/mpt/static/stylesheets/custom.css
+; XML2HTML transformation
+xslt_html=/workspace/mpt/static/stylesheets/jats-html.xsl
+
+; XML2FO transformation
+xslt_fo=/workspace/mpt/static/stylesheets/jats-xslfo.xsl
+
+; CSS styles
+css=/workspace/mpt/static/stylesheets/custom.css
+
+
+;;;;;;;;;;;;;;;;;;;;;;;;;;
+; PDF Rendering Settings ;
+;;;;;;;;;;;;;;;;;;;;;;;;;;
 
 [tools]
-
-mpdf=/workspace/xml2pdf/mpt/static/tools/xml2pdf-php/mpdf.php
+; Tools to use for PDF conversion. Supported tools are mPDF
+; (mpdf), Prince (prince), Antenna House Formatter (ahf) and Apache
+; FOP (fop). Specify a path to the binary or command to include a 
+; tool in the test run.
+ 
+mpdf=/workspace/mpt/static/tools/xml2pdf-php/mpdf.php
 prince=prince
 ahf=/usr/AHFormatterV6_64/run.sh
 fop=fop
