Still generate fo if html does not exist and vice versa

--- a/static/tools/test.cfg
+++ b/static/tools/test.cfg
@@ -18,7 +18,7 @@ base_dir = /workspace/mpt
 test_collection = misc
 
 ; Name of the particular test that is used in the filenames.
-test_name = footnote
+test_name =  footnote
 
 ;;;;;;;;;;;;;;;;;;;;;
 ; Pipeline Settings ;
@@ -31,7 +31,7 @@ test_name = footnote
 ; 2: (XML -> FO/HTML)
 ; 3: (FO/HTML -> PDF)
 ; Default is 1;
-start = 1
+start = 3 
 
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 ; XML Conversion and Style Settings ;
@@ -44,22 +44,26 @@ xslt_html=/workspace/mpt/static/stylesheets/jats-html.xsl
 
 ; XML2FO transformation
 xslt_fo=/workspace/mpt/static/stylesheets/jats-xslfo.xsl
-
+;xslt_fo=/workspace/mpt/static/stylesheets/docbook-xsl-1.79.0/fo/docbook.xsl
 ; CSS styles
 css=/workspace/mpt/static/stylesheets/custom.css
+;css=/workspace/xml2pdf/css-for-print/pdf-styles.css
 
 
 ;;;;;;;;;;;;;;;;;;;;;;;;;;
 ; PDF Rendering Settings ;
 ;;;;;;;;;;;;;;;;;;;;;;;;;;
 
-[tools]
 ; Tools to use for PDF conversion. Supported tools are mPDF
 ; (mpdf), Prince (prince), Antenna House Formatter (ahf) and Apache
 ; FOP (fop). Specify a path to the binary or command to include a 
 ; tool in the test run.
+
+[fo_tools]
+ahf=/usr/AHFormatterV6_64/run.sh
+fop=fop
+
+[html_tools]
  
 mpdf=/workspace/mpt/static/tools/xml2pdf-php/mpdf.php
 prince=prince
-ahf=/usr/AHFormatterV6_64/run.sh
-fop=fop
