--- a/static/tools/test.cfg
+++ b/static/tools/test.cfg
@@ -62,11 +62,11 @@ css=/home/wit/projects/mpt/static/stylesheets/custom.css
 
 [fo_tools]
 
-fop=fop
+;fop=fop
 ahf=/usr/AHFormatterV61_64/run.sh
 
 [html_tools]
  
-mpdf=/home/wit/projects/mpt/static/tools/xml2pdf-php/mpdf.php
+;mpdf=/home/wit/projects/mpt/static/tools/xml2pdf-php/mpdf.php
 
 ;prince=prince
