Added multi- file support

--- a/static/tools/test.cfg
+++ b/static/tools/test.cfg
@@ -18,7 +18,7 @@ base_dir = /home/wit/projects/mpt
 test_collection = misc
 
 ; Name of the particular test that is used in the filenames.
-test_name = rightToLeftFonts
+test_name = rightToLeftFonts,footnotes
 
 ;;;;;;;;;;;;;;;;;;;;;
 ; Pipeline Settings ;
