--- a/static/tools/preProcessConfig.json
+++ b/static/tools/preProcessConfig.json
@@ -42,7 +42,7 @@
         "settings": "settings_file_path",
         "zotero": true,
         "proprietary": true,
-        "path": "relative_path_to_typesetter",2:234
+        "path": "relative_path_to_typesetter",
         "language": "programming_language"
       }
     },
@@ -53,7 +53,10 @@
         "path": "full_path_to_input_folder",
         "name": "test_project",
         "type": "docx/doc/odt",
-        "typesetters": "name_of_the_typesetter",
+        "typesetters":  {
+        "1":"id_of_typesetter",
+        "2":"id_of_typestter" 
+        },
         "files": {
           "1": "48-69-240-1-2-20151208.docx",
           "2": "48-69-241-1-2-20151208.docx"
