--- a/static/tools/preProcessConfig.json
+++ b/static/tools/preProcessConfig.json
@@ -21,7 +21,7 @@
     {
       "active": true,
       "path": "/home/www-data/web2py/applications/UBHD_OMPPortal/static/files/presses/6/monographs/48/submission",
-      "name": "möhren",
+      "name": "moehren",
       "typesetters": {
         "1": {
           "name": "metypeset",
