--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "static/tools/meTypeset"]
 	path = static/tools/meTypeset
 	url = https://github.com/UB-Heidelberg/meTypeset.git
+[submodule "static/tools/saxon-he"]
+	path = static/tools/saxon-he
+	url = https://github.com/pressbooks/saxon-he
