web application BETA

--- a/private/appconfig.ini
+++ b/private/appconfig.ini
@@ -1,9 +1,9 @@
 ; App configuration
 [app]
-name        = Welcome
-author      = Your Name <you@example.com>
-description = a cool new app
-keywords    = web2py, python, framework
+name        = heiMPT
+author      = Dulip Withanage <dulip.withanage@gmail.com>
+description = Heidelberg Monograph Publication Tool (heiMPT) is a stand-alone platform, as well as a plug-in application for OMP, developed by staff of Heidelberg University Library in cooperation with external partners, with fundings of German Research Foundation (DFG). It enables a high degree of automation in the digital publication process. The platform consists of 4 modules: (1) typesetting (meTypeset), (2) xml-processor, (3) an output generation engine and (4) a WYSIWYG editor.
+keywords    = jats, xml-first, fo, omp, wysiwyg,  wysiwyg-editor,fop, bits, web2py, python, framework
 generator   = Web2py Web Framework
 
 ; Host configuration
@@ -27,4 +27,8 @@ ssl    = true
 ; form styling
 [forms]
 formstyle = bootstrap3_inline
-separator = 
+separator =
+
+[heimpt]
+url = https://localhost:8000/heimpt/api/project/
+exec=/home/www-data/web2py/applications/heimpt/static/tools/heimpt.py
