--- a/static/tools/plugins/import/omp/settings.example.json
+++ b/static/tools/plugins/import/omp/settings.example.json
@@ -1,9 +1,12 @@
 {
   "db-uri": "mysql://omp-user:omp-password@172.17.0.2:3306/omp",
-  "files-dir": "/path/to/omp/files",
+  "omp-files-dir": "/path/to/omp/files",
+  "files-output-dir": "/path/to/mpt/input/files",
+  "chapter-metadata-suffix": ".book-part-meta.bits2.xml",
+  "project-template": "configurations/01_wintz.bits.json",
+  "project-output": "configurations/import/omp",
   "press": 1,
   "file-stage": 2,
   "genre": 3,
-  "submission": 234,
-  "configurations-dir": ""
+  "submission": 234
 }
