omp.py: Changed syntax of print calls. Added file-types setting, to check only submission files with the specified media types. Working directory changed to heimpt.py folder on plugin initialization. Can deal with absolute paths in project-output and project-template settings. Added query for chapter files. Added XPathEvaluator for faster xpath queries during metadata injection. Remove collection-meta from bits2 template if submission is not part of a series in OMP. Fixed unicode bugs in abstract and biographies.
heimpt.py:
Changed building of import plugin path to os.path.join.
Fixed some documentation typos.

--- a/static/tools/plugins/import/omp/settings.example.json
+++ b/static/tools/plugins/import/omp/settings.example.json
@@ -7,6 +7,10 @@
   "project-output": "configurations/import/omp",
   "press": 1,
   "file-stage": 2,
+  "file-types": [
+    "application/vnd.oasis.opendocument.text",
+    "application/vnd.openxmlformats-officedocument.wordprocessingml.document"
+  ],
   "genre": 3,
   "submission": 234
 }
