Progress for #62. omp.py: Add command line options for importing all submissions of a press. Added setting to skip import of submissions without matching submission files (skip-submission-without-files). Fixed unicode error in formatting of book-title. Added check for existing isbn. Added more contrib-types to dictionary, ignored unknown user groups of contributors. Added unicode conversion for contributor names. heimpt.py: Changed parsing of command line arguments with docopt to use options_first.

--- a/static/tools/plugins/import/omp/settings.example.json
+++ b/static/tools/plugins/import/omp/settings.example.json
@@ -6,11 +6,12 @@
   "project-template": "configurations/01_wintz.bits.json",
   "project-output": "configurations/import/omp",
   "press": 1,
-  "file-stage": 2,
+  "file-stage": 11,
   "file-types": [
     "application/vnd.oasis.opendocument.text",
     "application/vnd.openxmlformats-officedocument.wordprocessingml.document"
   ],
   "genre": 3,
-  "submission": 234
+  "submission": 234,
+  "skip-submission-without-files": false
 }
