Progress for #62. omp.py: Added missing file stage mapping. Added configuration of file genres to press configurations in settings.json. Added genre id of chapter files to settings.json. Loading of all configured presses in initialize method. Changed logic to load only one full manuscript file and print warning if there are more. Added chapter file loading, print warning if there is more than matching file. Added 'full_file' to json configuration output. New check if any matching submission file exists and skip if 'skip-submission-without-files' was configured.

--- a/static/tools/plugins/import/omp/settings.example.json
+++ b/static/tools/plugins/import/omp/settings.example.json
@@ -11,7 +11,12 @@
     "application/vnd.oasis.opendocument.text",
     "application/vnd.openxmlformats-officedocument.wordprocessingml.document"
   ],
-  "genre": 3,
+  "presses": {
+    "heibooks": {
+      "manuscript-genre": 3,
+      "chapter-genre": 4
+    }
+  },
   "submission": 234,
   "skip-submission-without-files": false
 }
