--- a/tools/archive/test.cfg
+++ b/tools/archive/test.cfg
@@ -1,7 +1,7 @@
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 ;
 ; Test configuration for DOC2PDF conversion with various PDF tools and
-; pipelines for the Monograph Publication Tool (MPT).
+; pipelines for the Monograph Publication Tool (heimMPT).
 ;
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 
