--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "tools/saxon-he"]
 	path = tools/saxon-he
 	url = https://github.com/pressbooks/saxon-he
+[submodule "tools/meTypeset"]
+	path = tools/meTypeset
+	url = https://github.com/MartinPaulEve/meTypeset.git
